--- a/.env
+++ b/.env
@@ -2,7 +2,6 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ZZpXtwozcWAJiVUBG1bkSqXYkuP/U1QtVNHA69U2hMM=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +10,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+
+APP_URL=http://127.0.0.1:8000
+DB_DATABASE=smdc
 DB_USERNAME=root
 DB_PASSWORD=
+
+# APP_URL=http://127.0.0.1:8000
+# DB_DATABASE=smdc
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
