--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.24.1",
+        "toastr": "^2.1.4"
     }
 }
