--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ZZpXtwozcWAJiVUBG1bkSqXYkuP/U1QtVNHA69U2hMM=
+APP_KEY=base64:QJsMWJY9D/gs0DtoFsryp79cqKzRavTzg7shDsJ4CC8=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
