--- a/.env
+++ b/.env
@@ -2,7 +2,6 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:QJsMWJY9D/gs0DtoFsryp79cqKzRavTzg7shDsJ4CC8=
 APP_DEBUG=true
-APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+
+APP_URL=http://localhost
+DB_DATABASE=smdc
 DB_USERNAME=root
 DB_PASSWORD=
 
