inquiries and settings crud

--- a/.env
+++ b/.env
@@ -16,6 +16,11 @@ DB_DATABASE=smdc
 DB_USERNAME=root
 DB_PASSWORD=
 
+# APP_URL=http://localhost
+# DB_DATABASE=smdc
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
