--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -35,13 +35,22 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=mosesalcantara123@gmail.com
+MAIL_PASSWORD=nvcypjivtlkizvgp
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="smdc@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=17dbd8e49719d7
+# MAIL_PASSWORD=a6cd5b40945412
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="smdc@gmail.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
